Home->Title modificada

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,1 @@
-<p><%= link_to "Email", "mailto: contato@diogofreitas.com.br" %></p>
+<% title "Diogo Freitas" %><p><%= link_to "Email", "mailto: contato@diogofreitas.com.br" %></p>
