--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="google-site-verification" content="O8FzVIoPqlR-JEajgpHu2NMbNxZ80F0gEdHe8qbFeXg" />
+	<meta charset="utf-8" />
+	<meta name="description" content="Hi, I’m Diogo Freitas lorem ipsum dolor sit amet unbur deloc satiridi marl" />
+	<meta name="keywords" content="Diogo Freitas, diogofreitaspe, design, designer, Recife, Pernambuco, UX, Engenharia, Computação, ITA, user experience, diogo, freitas, QMágico" />
+	<meta name="author" content="Diogo Freitas" />
+	<meta name="robots" content="index, follow">
+
   <title><%= title %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
@@ -19,8 +24,6 @@
   <%= flash_messages %>
 
   <%= yield %>
-
-  <%# debug params if Rails.env.development? %>
 
 </div>
 
