--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,12 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<meta name="description" content="Hi, I’m Diogo Freitas lorem ipsum dolor sit amet unbur deloc satiridi marl" />
+	<meta name="description" content="Diogo Freitas" />
 	<meta name="keywords" content="Diogo Freitas, diogofreitaspe, design, designer, Recife, Pernambuco, UX, Engenharia, Computação, ITA, user experience, diogo, freitas, QMágico" />
 	<meta name="author" content="Diogo Freitas" />
 	<meta name="robots" content="index, follow">
+  <title>Diogo Freitas</title>
 
-  <title><%= title %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
