--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -55,7 +55,10 @@ body {
 	text-align: center;
 	background: url('/assets/background.jpg') top center no-repeat;
 	background-size: cover;
-	background-color: #A1B6D1;
+	webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-color: #D3C8C0;
 }
 
 p {
