--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
 	<meta name="keywords" content="Diogo Freitas, diogofreitaspe, design, designer, Recife, Pernambuco, UX, Engenharia, Computação, ITA, user experience, diogo, freitas, QMágico" />
 	<meta name="author" content="Diogo Freitas" />
 	<meta name="robots" content="index, follow">
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
   <title>Diogo Freitas</title>
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
