--- a/app/views/pages/home2.html.erb
+++ b/app/views/pages/home2.html.erb
@@ -1,4 +1,4 @@
-<div class="content-left">
+<div class="col-sm-4 full-height">
   <h1>
     <a href="www.qmagico.com.br" class="logo"></a>
   </h1>
@@ -24,4 +24,4 @@
   </div>
 
 </div>
-<div class="content-right bg-2"></div>
+<div class="col-xs-8 full-height hidden-xs bg-2"></div>
