--- a/app/views/pages/home3.html.erb
+++ b/app/views/pages/home3.html.erb
@@ -1,4 +1,4 @@
-<div class="content-left">
+<div class="col-sm-4 full-height">
   <h1>
     <a href="www.qmagico.com.br" class="logo"></a>
   </h1>
@@ -6,25 +6,36 @@
   <div class="container-fluid">
     <h2>Convide seus professores</h2>
     <h4>Convide os professores mais inovadores da sua escola para compartilhar dessa nova experiência.</h4>
-    <form role="form">
+    <form role="form" class="container-fluid no-margin">
 
       <div class="form-group">Convidar por <strong>email ou telefone</strong></div>
-      <div class="form-group">
-        <input type="email" class="form-control double-input" id="prof1" placeholder="Professor 1">
-        <input type="email" class="form-control" id="prof1" placeholder="Email ou telefone">
+      <div class="form-group row">
+        <div class="col-xs-4 no-margin-right">
+          <input type="email" class="form-control" id="prof1" placeholder="Professor 1">
+        </div>
+        <div class="col-xs-8">
+          <input type="email" class="form-control" id="prof1" placeholder="Email ou telefone">
+        </div>
       </div>
-      <div class="form-group">
-        <input type="email" class="form-control double-input" id="prof2" placeholder="Professor 2">
-        <input type="email" class="form-control" id="prof2" placeholder="Email ou telefone">
+      <div class="form-group row">
+        <div class="col-xs-4 no-margin-right">
+          <input type="email" class="form-control" id="prof2" placeholder="Professor 2">
+        </div>
+        <div class="col-xs-8">
+          <input type="email" class="form-control" id="prof2" placeholder="Email ou telefone">
+        </div>
       </div>
-      <div class="form-group">
-        <input type="email" class="form-control double-input" id="prof3" placeholder="Professor 3">
-        <input type="email" class="form-control" id="prof3" placeholder="Email ou telefone">
+      <div class="form-group row">
+        <div class="col-xs-4 no-margin-right">
+          <input type="email" class="form-control" id="prof3" placeholder="Professor 3">
+        </div>
+        <div class="col-xs-8">
+          <input type="email" class="form-control" id="prof3" placeholder="Email ou telefone">
+        </div>
       </div>
-
       <a href="https://meta.qmagico.com.br/" class="btn btn-success btn-lg">Finalizar</a>       
     </form>
   </div>
 
 </div>
-<div class="content-right bg-3"></div>
+<div class="col-xs-8 full-height hidden-xs bg-3"></div>
